[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ground-signal-reconciliation-assessment"
version = "0.1.0"
description = "Reconcile two inventory snapshots into a structured JSON report."
requires-python = ">=3.12,<4"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[tool.setuptools]
packages = ["inventory_reconciliation"]
py-modules = ["reconcile"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "RET",
  "PTH",
  "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
